// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments<Header> with description renders correctly 1`] = `
<View
  style={
    Object {
      "margin": 20,
    }
  }
>
  <Title
    text="Article description"
  />
</View>
`;

exports[`Comments<Header> with title renders correctly 1`] = `
<View
  style={
    Object {
      "margin": 20,
    }
  }
>
  <Title
    text="Important post title"
  />
</View>
`;

exports[`Comments<Header> without description doesn't render 1`] = `""`;
